# llama-manager

./: .gitignore  .llama-manager-notes.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  SKILL.md  agent_activities.json  agent_memory.json  chat_history.json  chroma_memory.py  config.json  deep_research.py  fix_agents.py  fix_insert_components.py  fix_monitor.py  fix_planner.py  migration-plan.md  migration_state.md  model_index.json  planner_tasks.json  questui-DESIGN.md
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  ipc.rs  lib.rs
legacy/: Cargo.toml
legacy/src/: agent.rs  config.rs  library.rs  main.rs  planner.rs  todo.rs
src/: agent.rs  calendar.rs  config.rs  library.rs  logger.rs  main.rs  notes.rs  planner.rs  todo.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config_io.rs  lib.rs  library.rs  logging.rs  main.rs  state.rs  util.rs
src-tauri/src/agent/: approval.rs  engine.rs  llm.rs  memory.rs  mod.rs  planner.rs  supervisor.rs
src-tauri/src/agent/tools/: files.rs  mcp_client.rs  mod.rs  shell.rs  web.rs
src-tauri/src/commands/: agent.rs  chat.rs  config.rs  mod.rs  remaining.rs  server.rs  store.rs  window.rs
src-ui/: Cargo.toml  Trunk.toml  index.html  style.css
src-ui-react/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src-ui-react/src/: App.tsx  globals.css
src-ui-react/src/components/: command-palette.tsx  sidebar.tsx  titlebar.tsx
src-ui-react/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  drawer.tsx  input.tsx  scroll-area.tsx  select.tsx  slider.tsx  switch.tsx  textarea.tsx
src-ui-react/src/lib/: ipc.ts  target.ts  theme.ts  utils.ts
src-ui-react/src/store/: app-store.ts
src-ui-react/src/tabs/: agents.tsx  calendar.tsx  chat.tsx  compare.tsx  deep-research.tsx  downloader.tsx  instances.tsx  library.tsx  mcp.tsx  monitor.tsx  notes.tsx  observability.tsx  overview.tsx  planner.tsx  settings.tsx  todos.tsx
src-ui/src/: api.rs  app.rs  components.rs  ipc.rs  main.rs  state.rs  theme.rs
src-ui/src/tabs/: chat.rs  config_tabs.rs  mod.rs  observability.rs  overview.rs  productivity.rs  remaining.rs  server.rs  settings.rs
