[package]
name = "ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Leptos CSR frontend for llama-manager (compiled to wasm, bundled by Trunk)"

# Binary crate: Trunk's `data-trunk rel="rust"` builds this and mounts it in the
# Tauri WebView. Compiles ONLY for wasm32 (built via `trunk`, not `cargo build`).
[[bin]]
name = "ui"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
shared = { path = "../crates/shared" }
serde.workspace = true
serde_json.workspace = true

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
gloo-timers = { version = "0.3", features = ["futures"] }

console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
chrono = { version = "0.4", features = ["clock", "wasmbind"] }
